# time_booking_server

./: .env.dev  Cargo.toml  LICENSE  README.md
migrations/2022-04-23-102735_create_projets/: down.sql  up.sql
src/: context.rs  db.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  schema.rs
src/graphql_model/: project.rs
src/resource_model/: mod.rs  project_rs.rs
