[package]
name = "graphql_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
r2d2 = "0.8.8"
serde_json = "1.0.44"